<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communicate</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zyc@todo.todo">zyc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>plumbing</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>